global search:   - made search icon viewable on large form-factor viewports   - made search form globally available on all form-factors   - added behavior (js) to toggle visibility of search form via search icon advanced search:   - minor style changes   - (attempted) to address a Firefox Flexbug issue

--- a/web/themes/custom/hm-public-theme/static/sass/base/_header.scss
+++ b/web/themes/custom/hm-public-theme/static/sass/base/_header.scss
@@ -52,6 +52,16 @@
     opacity: 1;
   }
 }
+.search-form { display: none; }
+
+.header__search {
+  width: 36px;
+
+  svg {
+    height: 34px;
+  }
+
+}
 
 .header__da-link {
   @extend %source-sans;
