--- a/web/themes/custom/hm-public-theme/static/sass/views/_advanced-search.scss
+++ b/web/themes/custom/hm-public-theme/static/sass/views/_advanced-search.scss
@@ -24,7 +24,7 @@
 }
 
 .js-facets-autocomplete {
-  max-width: 100% !important;
+  max-width: 80% !important;
 }
 
 .views-field-title {
